--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "npm-typescript-package-template",
-  "version": "0.0.0",
-  "description": "A template for easy creation of new NPM packages",
+  "name": "unstated-next-subscribe",
+  "version": "1.0.0",
+  "description": "A React Higher Order Component (HOC) that allows for use of unstated-next containers in non-FunctionalComponents (class components).",
   "main": "dist/index.js",
   "source": "src/index.ts",
   "module": "dist/index.mjs",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rimraf dist && microbundle",
+    "build": "rimraf dist && microbundle --external react --globals react=React --strict --no-compress --jsx React.createElement",
     "format-check": "prettier --check .",
     "format": "prettier --write .",
     "test": "jest --coverage --passWithNoTests",
@@ -20,7 +20,16 @@
     "type": "git",
     "url": "git+https://github.com/dkershner6/npm-typescript-package-template.git"
   },
-  "keywords": [],
+  "keywords": [
+    "unstated",
+    "unstated-next",
+    "subscribe",
+    "hoc",
+    "higher",
+    "order",
+    "component",
+    "class"
+  ],
   "author": "Derek Kershner",
   "license": "MIT",
   "bugs": {
@@ -28,22 +37,36 @@
   },
   "homepage": "https://github.com/dkershner6/npm-typescript-package-template#readme",
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.1",
+    "@testing-library/react": "^10.4.7",
     "@types/jest": "^26.0.4",
     "@types/node": "^14.0.22",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
     "cross-env": "^7.0.2",
     "eslint": "^7.4.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-jest": "^23.18.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "eslint-plugin-testing-library": "^3.3.1",
     "jest": "^26.1.0",
     "microbundle": "^0.12.3",
     "prettier": "^2.0.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.6"
+    "typescript": "^3.9.6",
+    "unstated-next": "^1.1.0"
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0",
+    "unstated-next": "*"
   },
   "files": [
     "dist/*"
