--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "unstated-next-subscribe",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A React Higher Order Component (HOC) that allows for use of unstated-next containers in non-FunctionalComponents (class components).",
   "main": "dist/index.js",
   "source": "src/index.ts",
-  "module": "dist/index.mjs",
+  "module": "dist/index.m.js",
   "unpkg": "dist/index.umd.js",
   "types": "dist/index.d.ts",
   "scripts": {
